// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Circle Center - emitted G-code is stable for Inside bore 1`] = `
[
  "; 3D Probe Circle Center - inside bore, diameter 20",
  "; Instructions: start with the probe inside the hole, near its middle and below the top surface.",
  "%PROBE_DELAY=0.05",
  "%CIRCLE_FAST=150",
  "%CIRCLE_SLOW=75",
  "%CIRCLE_RETRACT=2",
  "%CIRCLE_RETOUCH=3",
  "%CIRCLE_SEARCH_HALF=15",
  "%CIRCLE_SEARCH_FULL=25",
  "M5",
  "G21 G91",
  "; X - inside bore",
  "G38.2 X-[CIRCLE_SEARCH_HALF] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 X[CIRCLE_RETRACT]",
  "G38.2 X-[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%X_FIRST=posx",
  "G21 G91 G0 X[CIRCLE_RETRACT]",
  "G38.2 X[CIRCLE_SEARCH_FULL] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 X-[CIRCLE_RETRACT]",
  "G38.2 X[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%X_SECOND=posx",
  "%X_CENTER=((X_SECOND - X_FIRST)/2)*-1",
  " G91 G0 X[X_CENTER]",
  "G21 G91",
  "; Y - inside bore",
  "G38.2 Y-[CIRCLE_SEARCH_HALF] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Y[CIRCLE_RETRACT]",
  "G38.2 Y-[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%Y_FIRST=posy",
  "G21 G91 G0 Y[CIRCLE_RETRACT]",
  "G38.2 Y[CIRCLE_SEARCH_FULL] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Y-[CIRCLE_RETRACT]",
  "G38.2 Y[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%Y_SECOND=posy",
  "%Y_CENTER=((Y_SECOND - Y_FIRST)/2)*-1",
  " G91 G0 Y[Y_CENTER]",
  "G21 G91",
  "G21 G10 L20 P0 X0 Y0",
  "G4 P[PROBE_DELAY]",
]
`;

exports[`Circle Center - emitted G-code is stable for Outside boss 1`] = `
[
  "; 3D Probe Circle Center - outside boss, diameter 20",
  "; Instructions: start with the probe above the middle of the boss, clear of the top.",
  "%PROBE_DELAY=0.05",
  "%CIRCLE_FAST=150",
  "%CIRCLE_SLOW=75",
  "%CIRCLE_RETRACT=2",
  "%CIRCLE_RETOUCH=3",
  "%CIRCLE_OUT=15",
  "%CIRCLE_REACH=10",
  "%CIRCLE_CROSS=27",
  "%CIRCLE_PROBE_DEPTH=5",
  "M5",
  "G21 G91",
  "; X - outside boss",
  "G21 G91 G0 X[CIRCLE_OUT]",
  "G21 G91 G0 Z-[CIRCLE_PROBE_DEPTH]",
  "G38.2 X-[CIRCLE_REACH] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 X[CIRCLE_RETRACT]",
  "G38.2 X-[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%X_FIRST=posx",
  "G21 G91 G0 X[CIRCLE_RETRACT]",
  "G21 G91 G0 Z[CIRCLE_PROBE_DEPTH]",
  "G21 G91 G0 X-[CIRCLE_CROSS]",
  "G21 G91 G0 Z-[CIRCLE_PROBE_DEPTH]",
  "G38.2 X[CIRCLE_REACH] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 X-[CIRCLE_RETRACT]",
  "G38.2 X[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%X_SECOND=posx",
  "G21 G91 G0 X-[CIRCLE_RETRACT]",
  "G21 G91 G0 Z[CIRCLE_PROBE_DEPTH]",
  "%X_CENTER=((X_SECOND - X_FIRST)/2)*-1",
  " G91 G0 X[X_CENTER]",
  "G21 G91",
  "; Y - outside boss",
  "G21 G91 G0 Y[CIRCLE_OUT]",
  "G21 G91 G0 Z-[CIRCLE_PROBE_DEPTH]",
  "G38.2 Y-[CIRCLE_REACH] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Y[CIRCLE_RETRACT]",
  "G38.2 Y-[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%Y_FIRST=posy",
  "G21 G91 G0 Y[CIRCLE_RETRACT]",
  "G21 G91 G0 Z[CIRCLE_PROBE_DEPTH]",
  "G21 G91 G0 Y-[CIRCLE_CROSS]",
  "G21 G91 G0 Z-[CIRCLE_PROBE_DEPTH]",
  "G38.2 Y[CIRCLE_REACH] F[CIRCLE_FAST]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Y-[CIRCLE_RETRACT]",
  "G38.2 Y[CIRCLE_RETOUCH] F[CIRCLE_SLOW]",
  "G4 P[PROBE_DELAY]",
  "%Y_SECOND=posy",
  "G21 G91 G0 Y-[CIRCLE_RETRACT]",
  "G21 G91 G0 Z[CIRCLE_PROBE_DEPTH]",
  "%Y_CENTER=((Y_SECOND - Y_FIRST)/2)*-1",
  " G91 G0 Y[Y_CENTER]",
  "G21 G91",
  "G21 G10 L20 P0 X0 Y0",
  "G4 P[PROBE_DELAY]",
]
`;
